--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -12,7 +12,7 @@
 %\usepackage{mathpazo,tgpagella} % auch sehr schöne Schriften
 \usepackage{setspace} % Zeilenabstand
 \usepackage{amssymb}
-% \onehalfspacing % 1,5 Zeilen
+\onehalfspacing % 1,5 Zeilen
 % Schriften-Größen
 \setkomafont{chapter}{\huge\rmfamily} % Überschrift der Ebene
 \setkomafont{section}{\large\rmfamily}
