--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -1608,8 +1608,8 @@ Wie \autoref{tab.MIC} nun eindrucksvoll zeigt, liegt die Rechenzeit für das fei
 \begin{table}[H]\vspace{1ex}\centering
 \begin{tabular}{|ll||l|l|l|l|}\hline
 \multicolumn{2}{|c||}{$N$} & 32  & 64 & 128 & 256 \\\hline\hline
-\multirow{5}* & Schritte & 11  & 29 & 63  & 11 \\\cline{2-6}
-& Rechenzeit in s &  0.18  & 0.70 & 3.61 & 22.00 \\\hline
+\multirow{5}* & Schritte & 13  & 12 & 12  & 11 \\\cline{2-6}
+& Rechenzeit in s &  0.02  & 0.07 & 0.31 & 1.20 \\\hline
 \end{tabular}
 \caption[Jacobi-Iterationsverfahren]{Je größer $N$ wird, desto mehr Iterationsschritte und Rechenaufwand ist zum Lösen der Gleichung nötig.}
 \vspace{2ex}\end{table}
@@ -1619,13 +1619,13 @@ Wie \autoref{tab.MIC} nun eindrucksvoll zeigt, liegt die Rechenzeit für das fei
 \begin{table}[H]\vspace{1ex}\centering
 \begin{tabular}{|ll||l|l|l|l|}\hline
 \multicolumn{2}{|c||}{$N$} & 32  & 64 & 128 & 256 \\\hline\hline
-\multirow{5}* & Schritte & 2092  & 8345 & 33332  & 133227  \\\cline{2-6}
-& Rechenzeit in s &  0.45  & 7.28 & 120.31 & bla \\\hline
+\multirow{5}* & Schritte & 11  & 11 & 10  & 9  \\\cline{2-6}
+& Rechenzeit in s &  0.03  & 0.11 & 0.45 & 2.03 \\\hline
 \end{tabular}
 \caption[Jacobi-Iterationsverfahren]{Je größer $N$ wird, desto mehr Iterationsschritte und Rechenaufwand ist zum Lösen der Gleichung nötig.}
 \vspace{2ex}\end{table}
 
-Es zeigt sich also, dass sowohl iterative Verfahren, als auch die Mehrgittermethoden, in der numerischen Mathematik eine tragende Rolle spielen. Die Effizienz dieser Verfahren ist beeindruckend und findet in vielen Gebieten Anwendung. Selbst Verfahren, die nun nicht als optimal gelten, können durch ein wenig Fingerspitzengefühl und mathematischen Kalkül zu einem unumgänglichen Werkzeug geformt werden. Man darf gespannt sein, was in Zukunft noch für Ansätze zur Lösung linearer Gleichungssysteme gefunden werden.
+Es zeigt sich also, dass sowohl iterative Verfahren, als auch die Mehrgittermethoden, in der numerischen Mathematik eine tragende Rolle spielen. Die Effizienz dieser Verfahren ist beeindruckend und findet in vielen Gebieten Anwendung. Man darf gespannt sein, was in Zukunft noch für Ansätze zur Lösung linearer Gleichungssysteme gefunden werden. Allerdings ist es nur schwer vorstellbar, noch effizientere Algorithmen als die vorgestellten zu entwickeln.
 
 % \begin{table}[H]\vspace{1ex}\centering\begin{tabular}{|l|l|}
 % \hline
