--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -63,7 +63,7 @@
 \definecolor{grau}{gray}{0.25}
 \lstset{
 	extendedchars=true,
-	basicstyle=\tiny\ttfamily,
+	basicstyle=\footnotesize\ttfamily,
 	%basicstyle=\footnotesize\ttfamily,
 	tabsize=2,
 	keywordstyle=\textbf,
