Brought new pics to pdf.

--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -182,7 +182,7 @@ Man stellt $\Delta_{h} u(x,y)$ auch als 5-Punkt-Differenzenstern (Abbildung 2.1)
 \end{equation}
 dar. (Dahmen Reusken)
 
-\bild{grid}{8cm}{Nummerierung der Punkte von $\Omega = (0,1)^{2}$ mit $m=5$. In x- bzw. y-Richtung gibt es jeweils $N=4$ Punkte}{Gitter}\label{img.gridWithNumbers}
+\bild{gitter}{12cm}{Nummerierung der Punkte von $\Omega = (0,1)^{2}$ mit $m=5$. In x- bzw. y-Richtung gibt es jeweils $N=4$ Punkte}{Gitter}\label{img.gridWithNumbers}
 
 Es werden nun alle Gitterpunkte des Gitters fortlaufend von links unten nach rechts oben (Abbildung 2.2) nummeriert (Lexikographische Nummerierung). Stellt man nun \autoref{eq.5-Point-Star} für jeden Punkt auf, so führt dies auf eine $N^{2} \times N^{2}$-Matrix, in der die Koeffizienten der Gleichung abgespeichter werden. Die vierfache Gewichtunge der Funktion $u(x,y)$ steht in der Diagonale. Der linke bzw. der rechte Nachbar im Gitter sind auf der unteren bzw. oberen Nebendiagonalen zu finden, so fern der Nachbar in $\Omega_{h}$ liegt. Die oberen bzw. unteren Nachbarn, falls diese in $\Omega_{h}$ liegen, werden jeweils auf der $N-ten$ Nebendiagonalen der Matrix gespeichert.
 
