--- a/LaTex/BachelorThesis/IterativeMethodsForTheDiscretizedPoissonEquation_settings.tex
+++ b/LaTex/BachelorThesis/IterativeMethodsForTheDiscretizedPoissonEquation_settings.tex
@@ -18,7 +18,7 @@
 \setkomafont{section}{\large\rmfamily}
 \setkomafont{subsection}{\large\rmfamily}
 \setkomafont{subsubsection}{\large\rmfamily}
-\setkomafont{chapterentry}{\large\rmfamily} % Überschrift der Ebene in Inhaltsverzeichnis
+\setkomafont{chapterentry}{\small\rmfamily} % Überschrift der Ebene in Inhaltsverzeichnis
 \setkomafont{descriptionlabel}{\bfseries\rmfamily} % für description Umgebungen
 \setkomafont{captionlabel}{\small\bfseries}
 \setkomafont{caption}{\small}
